# marcfinder

./: .gitignore  README.md  marc-verbose.json  marc.json  pyproject.toml  scrape_marc.py
marc_cli/: __init__.py  main.py
