[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marcfinder"
version = "0.1.0"
description = "Fast CLI tool for looking up MARC 21 bibliographic field definitions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
marc = "marc_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["marc_cli*"]
